# prodcons

./: CMakeLists.txt  README.md  build-run.sh  chunker.hpp  fastout.hpp  fatol.hpp  main.cpp  prodcons.hpp  tsqueue.hpp
simplified1/: CMakeLists.txt  chunker.hpp  main.cpp  prodcons.hpp  semaphore.h  solver.hpp  test.sh  tsqueue.hpp  wsource.hpp
